Cleaned up code. Moved to using <a>s for clickable elements rather than <div>s. Using <strong> tag to set boldness, rather than hardcoding in CSS. Removed redundant "display: none" toggle that 'fixed' a scrollbar issue caused by CSS issue. Changed "padding-bottom: 100px" to affect *just* the result, and not explanation (which has no content underneath it). CSS now corrects sets text allignment for class "result" and padding for *id* "result".

--- a/style.css
+++ b/style.css
@@ -59,9 +59,12 @@ input:focus{
     padding-bottom: 200px;
 }
 
-.result{
-    text-align: center;
+#result {
     padding-bottom: 100px;
+}
+
+.result {
+   text-align: center;
 }
 
 ::selection {
@@ -78,8 +81,4 @@ main{
 
 .noline{
     text-decoration: none;
-}
-
-.suggestion{
-    font-weight: bold;
 }
